# Murrelektronik_PythonFMU_Test_Repo

./: CMakeLists_debug.txt  MVK54531.fmu  MVK54531.py  NoNumpy.fmu  README.md  TestCompileMVK54531.py  TestMVKFMU2.fmu  TestMVKFMU2.py  env.txt  pythonpathforFMPYgui.txt  requirements.txt  scratch.py  test.py
MVK54531/: MVK54531.fmu  modelDescription.xml
MVK54531/resources/: MVK54531.py  slavemodule.txt
MVK54531/resources/Modules/: DI8.py  MVKLEDConfig.py  QualifierDI8.py  SystemState.py
MVK54531_dummy/: modelDescription.xml
Modules/: DO8.py  LED.py  Shortcircuittrigger.py
NoNumpy/: NoNumpy.fmu  modelDescription.xml
NoNumpy/resources/: slavemodule.txt
NoNumpy_18022025/: NoNumpy.fmu  modelDescription.xml
NoNumpy_18022025/resources/: NoNumpy.py
TestMVKFMU2/: TestMVKFMU2.fmu  modelDescription.xml
TestMVKFMU2/resources/: TestMVKFMU2.py  slavemodule.txt
TestMVKFMU2/sources/src/: CMakeLists.txt
fmuexample/: CMakeLists.txt
fmuexample/src/: CMakeLists.txt
fmuexample/src/Modules/: LED.py  QualifierDO8.py  SystemState.py
fmuexample/src/fmuexample/: MVK54531.py
pythonfmu/: enums.py  requirements.txt
pythonfmu/pythonfmu-export/: CMakeLists.txt
pythonfmu/tests/slaves/: MVK54531.py
tmp-build/: CMakeCache.txt
